# spotlight-backend

./: .env-example  .env.test-example  .gitignore  README.md  main.py  pyproject.toml  settings.py
alembic/: env.py
alembic/versions/: 056e3232b8b1_initial_migration.py  165101a9ddcb_create_interview_table.py  240b60b76230_restarting_user.py  2ddcc1d73327_restarting_location.py  2f7367898ea2_alter_state_table_add_column_admin_code.py  341443bcf14e_create_interview_and_interview_type_.py  3f60a4d5c074_add_columns_user_created_and_updated_at.py  521c22220677_restart_db.py  54d61e12cacb_create_interview_type_table.py  8e5e1b94a7eb_application_stage_unique_name.py  abfe268e9f2e_criando_tabelas_city_e_country.py  bdf9b42b6397_restart_db_with_general_base.py  c4eac481b039_modifying_location_tables.py  c9fbb7df0b0a_create_job_table.py  ddc2e4a28037_restart_db.py  ef3b555f5e86_create_company_table.py  f90cef16c664_restarting_company.py  fbbf84049a37_alter_state_table_add_column_code.py
containers/: container.py  user_container.py
domain/entities/: __init__.py  application_stage.py  company.py  interview.py  interview_type.py  job.py  location.py  user.py
domain/exceptions/: app_error.py  argument_error.py  bad_request_error.py  error_handler.py  integrity_error.py  not_found_error.py  (+2 more)
frameworks_drivers/: fastapi_main.py
tests/: conftest.py
use_cases/: application_stage_use_cases.py  auth_use_cases.py  company_use_cases.py  interview_type_use_cases.py  interview_use_cases.py  job_use_cases.py  location_use_cases.py  user_use_cases.py
utils/: utils.py
(+67 files in other folders)
